# Whitespace-Interpreter

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md  whiteSpace_interpreter.cpp  whitespace.h
src/: Parser.cpp  Parser.h  Reader.cpp  Reader.h  Token.h  WhiteSpaceInterpreter.cpp  WhiteSpaceInterpreter.h  main.cpp
tests/: CMakeLists.txt  parser_tests.cpp  reader_tests.cpp  whitespaceinterpreter_test.cpp
